finish company and information

--- a/front-end/todo.txt
+++ b/front-end/todo.txt
@@ -1,3 +1,3 @@
--- signup page error
--- login page
--- save tokin on localstorage
+-- Add Items In Information 
+-- Create Company 
+-- Add Company In Company 
